--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
           sudo apt-get install -y flex bison byacc make cmake m4
           sudo apt-get install -y openssl libssl-dev zlib1g-dev libcrypto++8
           sudo apt-get install -y gsoap libgsoap-dev
-      - name: Build project
+      - name: Build binary
         run: |
           cmake -B build . -DUSE_GSOAP_STATIC_LIB=1
           cmake --build build
