--- a/.github/workflows/release-assets.yaml
+++ b/.github/workflows/release-assets.yaml
@@ -1,49 +1,12 @@
-# name: Build and create release asset
-
-# on:
-#   release:
-#     types:
-#       - published
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     strategy:
-#       matrix:
-#         architecture: [amd64, arm64]
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-#       - name: Install dependencies
-#         run: |
-#           sudo apt-get update
-#           sudo apt-get install -y flex bison byacc make cmake m4
-#           sudo apt-get install -y openssl libssl-dev zlib1g-dev libcrypto++8
-#           sudo apt-get install -y gsoap libgsoap-dev
-#       - name: Build binary
-#         run: |
-#           cmake -B build . -DUSE_GSOAP_STATIC_LIB=1 -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.architecture }}
-#           cmake --build build
-#       - name: Upload release asset
-#         uses: actions/upload-release-asset@v1
-#         with:
-#           upload_url: ${{ github.event.release.upload_url }}
-#           asset_path: build/onvif_srvd-${{ matrix.architecture }}
-#           asset_name: onvif_srvd-${{ matrix.architecture }}-linux
-#           asset_content_type: application/octet-stream
-
 name: Build and create release asset
 
 on:
-  pull_request:
-    branches:
-      - '*'
-  push:
-    branches:
-      - '*'
+  release:
+    types:
+      - published
 
 jobs:
-  build:
+  asset:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -61,6 +24,10 @@ jobs:
         run: |
           cmake -B build . -DUSE_GSOAP_STATIC_LIB=1 -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.architecture }}
           cmake --build build
-      - name: Verify build output
-        run: |
-          ls -l build
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: build/onvif_srvd-${{ matrix.architecture }}
+          asset_name: onvif_srvd-${{ matrix.architecture }}-linux
+          asset_content_type: application/octet-stream
