--- a/.github/workflows/release-assets.yaml
+++ b/.github/workflows/release-assets.yaml
@@ -28,6 +28,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: build/onvif_srvd-${{ matrix.architecture }}
+          asset_path: build/onvif_srvd
           asset_name: onvif_srvd-${{ matrix.architecture }}-linux
           asset_content_type: application/octet-stream
